fix resizing, fix navigation overflow, fix selection

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -4,9 +4,7 @@ header, .sidebar
   height: 50px
 
   .header-wrapper, &.sidebar
-    width: 980px
-    margin: auto
-
+    padding: 0 10px
     .logo
       width: 100px
       height: 50px
