--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -70,7 +70,7 @@
 
     .types
       position: absolute
-      top: 29px
+      top: 26px
       left: 0px
       background: #e9e9e9
       text-align: left
