--- a/sass/application.sass
+++ b/sass/application.sass
@@ -12,10 +12,10 @@ strong
   -webkit-font-smoothing: antialiased
 
 .app-wrapper
-  width: 980px
-  margin: auto
-  padding-top: 20px
+  width: 100%
+  padding: 20px 10px 0 10px
   +clearfix()
+  overflow: visible
 
 .right-wrapper
   float: right
